# zkc

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  constraint-ir.md  roadmap.md  spec-v0.md  stdlib.md  tracing.md
docs/language/: booleans.md  builtins.md  imports.md  includes.md  integers.md
docs/testing/: golden-corpus.md
examples/: balance.zk  booleans.zk  builtins.zk  cubic.zk  functions.zk  integers.zk  logic.zk  optimize.zk  product.zk  stdlib_bools.zk  stdlib_demo.zk  trace.zk  weighted_sum.zk
examples/imports/: main.zk
examples/includes/: main.zk
examples/includes/lib/: logic.zk  math.zk
examples/includes/shared/: bools.zk  offsets.zk
src/: analysis.rs  ast.rs  builtins.rs  compiler.rs  constraint.rs  error.rs  eval.rs  field.rs  groth16.rs  hir.rs  ir.rs  lexer.rs  lib.rs  main.rs  optimize.rs  parser.rs  pretty.rs  proof.rs  serialize.rs  source.rs  span.rs  trace.rs  typecheck.rs  verify.rs
src/backend/: interpreter.rs  mod.rs
stdlib/arith/: accumulators.zk  constants.zk  polynomials.zk  scaling.zk
stdlib/bool/: advanced.zk  core.zk
stdlib/patterns/: blends.zk  gated.zk  pipeline.zk
stdlib/select/: bool.zk  field.zk
tests/: cli.rs  golden.rs
tests/golden/err/: arithmetic_on_bool.zk  builtin_bool_type_mismatch.zk  duplicate_binding.zk  duplicate_builtin_name.zk  duplicate_function.zk  function_return_type_mismatch.zk  (+9 more)
(+19 files in other folders)
