[package]
name = "zkc"
version = "0.1.0"
edition = "2024"
description = "A tiny zero-knowledge-oriented language and compiler prototype."
license = "MIT"
repository = "https://github.com/nktkt/zkc"
readme = "README.md"
keywords = ["zk", "compiler", "dsl", "cryptography"]
categories = ["compilers", "cryptography"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
num-bigint = "0.4.6"
rand = "0.8.5"
